# BareMetal-TM4C123G

./: .gitignore  CMakeLists.txt  README.md  main.c  startup.c  tm4c123gh6pm.ld
inc/: tm4c123gh6pm_minimal.h
